feat(core): added support for loading excalidraw file from server

--- a/packages/excalidraw/locales/en.json
+++ b/packages/excalidraw/locales/en.json
@@ -141,6 +141,10 @@
       "edit": "Edit line",
       "editArrow": "Edit arrow"
     },
+    "fileMenu":{
+      "recent":"Recent files",
+      "files":"Files"
+    },
     "elementLock": {
       "lock": "Lock",
       "unlock": "Unlock",
