feat: added support for update folders and files

--- a/packages/excalidraw/locales/en.json
+++ b/packages/excalidraw/locales/en.json
@@ -143,7 +143,7 @@
     },
     "fileMenu":{
       "recent":"Recent files",
-      "files":"Files"
+      "files":"File Explorer"
     },
     "elementLock": {
       "lock": "Lock",
