feat: added save file support
- Added cut and paste support to move file and folders

--- a/packages/excalidraw/locales/en.json
+++ b/packages/excalidraw/locales/en.json
@@ -142,7 +142,7 @@
       "editArrow": "Edit arrow"
     },
     "fileMenu":{
-      "recent":"Recent files",
+      "recent":"Drafts",
       "files":"File Explorer"
     },
     "elementLock": {
